--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tabo-autometagen-ai",
+  "name": "autometagen-ai-by-tabo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
