--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,34 @@
 
 {
-  "short_name": "Autometa AI",
+  "manifest_version": 3,
   "name": "Autometagen AI by Tabo",
-  "icons": [
-    {
-      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100' fill='none'%3E%3Cpath d='M50 5L90 25V75L50 95L10 75V25L50 5Z' stroke='white' stroke-width='4'/%3E%3Cpath d='M30 35H70' stroke='white' stroke-width='8' stroke-linecap='round'/%3E%3Cpath d='M50 35V75' stroke='white' stroke-width='8' stroke-linecap='round'/%3E%3C/svg%3E",
-      "sizes": "192x192",
-      "type": "image/svg+xml"
-    },
-    {
-      "src": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100' fill='none'%3E%3Cpath d='M50 5L90 25V75L50 95L10 75V25L50 5Z' stroke='white' stroke-width='4'/%3E%3Cpath d='M30 35H70' stroke='white' stroke-width='8' stroke-linecap='round'/%3E%3Cpath d='M50 35V75' stroke='white' stroke-width='8' stroke-linecap='round'/%3E%3C/svg%3E",
-      "sizes": "512x512",
-      "type": "image/svg+xml"
-    }
+  "version": "1.0.0",
+  "description": "Professional stock metadata intelligence that syncs directly with contributor pages.",
+  "permissions": [
+    "sidePanel",
+    "tabs",
+    "activeTab",
+    "scripting",
+    "storage"
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#0a0a0a",
-  "background_color": "#0a0a0a"
+  "host_permissions": [
+    "https://*.dreamstime.com/*",
+    "https://*.stock.adobe.com/*",
+    "https://*.shutterstock.com/*",
+    "https://*.teepublic.com/*",
+    "https://api.groq.com/*",
+    "https://generativelanguage.googleapis.com/*"
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "side_panel": {
+    "default_path": "index.html"
+  },
+  "action": {
+    "default_title": "Open Autometagen AI"
+  },
+  "icons": {
+    "192": "data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100' fill='none'%3E%3Cpath d='M50 5L90 25V75L50 95L10 75V25L50 5Z' stroke='white' stroke-width='4'/%3E%3Cpath d='M30 35H70' stroke='white' stroke-width='8' stroke-linecap='round'/%3E%3Cpath d='M50 35V75' stroke='white' stroke-width='8' stroke-linecap='round'/%3E%3C/svg%3E"
+  }
 }
